# liblmplayer-lyric

./: .gitignore  Makefile  Makefile.am  autogen.sh  configure.ac  control  liblmplayer-lyric.pc.in  main.c
po/: POTFILES  POTFILES.in
src/: Makefile.am  lyric-downloader-tt.c  lyric-downloader-tt.h  lyric-downloader.c  lyric-downloader.h  lyric-loader.c  lyric-loader.h  lyric-selection-dialog.c  lyric-selection-dialog.h  lyric-widget-da.c  lyric-widget-da.h  lyric-widget-text.c  lyric-widget-text.h  lyric-widget.c  lyric-widget.h  main.c  test-dialog.c  test-downloader.c  test-widget.c  test.lrc  test2.lrc  tt_lyric.c  tt_lyric.h
