AC_INIT(src/lyric-downloader.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(liblmplayer-lyric, 1.0.0)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.21])

AC_PROG_CC
AC_PROG_CPP
AM_PROG_CC_C_O
AC_ISC_POSIX
AC_HEADER_STDC
AC_PROG_INSTALL

AM_PROG_LIBTOOL

GTK_REQUIRED=2.18.0
GLIB_REQUIRED=2.22.0
GTHREAD_REQUIRED=2.22.0

PKG_CHECK_MODULES(PACKAGE, 
									gtk+-2.0 >= $GTK_REQUIRED 
									glib-2.0 >= $GLIB_REQUIRED 
									gthread-2.0 >= $GTHREAD_REQUIRED 
									libxml-2.0)

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

#ALL_LINGUAS="zh_CN"

#GETTEXT_PACKAGE=gtk-fx-1.0
#AC_SUBST(GETTEXT_PACKAGE)
#AM_GLIB_GNU_GETTEXT
#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", "definition of GETTEXT_PACKAGE")

AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
liblmplayer-lyric.pc
po/Makefile.in
])
